new coors on agreement pie + legend on best practices

--- a/Negotiation3/reports/practices-performance.html
+++ b/Negotiation3/reports/practices-performance.html
@@ -186,20 +186,20 @@
 			var agreementPieData = [
 					{
 						value: yesCount,
-						color:"#ff9f33",
-						highlight: "#FFB25C",
+						color: "#2ee478",
+						highlight: "#58E993",
 						label: "Yes",
 					},
 					{
 						value: noCount,
-						color: "#445ae1",
-						highlight: "#697BE7",
+						color:"#DF5353",
+						highlight: "#E57575",
 						label: "No"
 					},
 					{
 						value: notYetCount,
-						color: "#2ee478",
-						highlight: "#58E993",
+						color:"#ff9f33",
+						highlight: "#FFB25C",
 						label: "Not Yet"
 					}
 				];
