Content edits from Mike

--- a/Negotiation3/reports/about.html
+++ b/Negotiation3/reports/about.html
@@ -154,27 +154,12 @@
 			<div align="center">
 		        <img src="image-6.png" width="100px" height="100px" class="img-circle">
 			</div>
-			<p style="font-size: 14px;">Everyone negotiates. At work. In their communities. And even at home with their families. Negotiating well means:</p>
-
-			<ul style="margin: 10px 0px 10px -20px; font-size: 14px;">
-				<li>reaching agreements that might slip through most people's fingers</li>
-				<li>crafting value-creating solutions</li>
-				<li>resolving small differences before they become costly disputes</li>
-			</ul>
-		</section>
-		
-		<section class="card">
-			<p style="font-size: 14px;">Successful negotiators are well-rounded. They rely on complementary interpersonal, analytic, and problem-solving skills.</p>
-			<p style="font-size: 14px;">Great negotiators also are agile. They adjust their approach to the situation at hand and deal effectively with different bargaining styles.</p>
-		</section>
-
-		<section class="card">
-			<p style="font-size: 14px;"><strong>Negotiation 360&deg;</strong> was developed by Harvard Business School professor and author Michael Wheeler to help you identify skills you can build on, as well as other areas where you can improve. It highlights key negotiation concepts and techniques for creating value, engaging other parties, and learning from experience.</p>
+			<p style="font-size: 14px;"><strong>Negotiation 360&deg;</strong> was developed by Harvard Business School professor and author Michael Wheeler to help you identify current skills you can build on, as well as other areas where you can improve. It highlights key negotiation concepts and techniques for creating value, engaging other parties, and learning from experience.</p>
 		</section>
 
 		<section class="selfasesscard">
 			<div style="height:65px"></div>
-			<p style="font-size: 14px;">It has three closely linked features. The <strong>Self-assessment</strong> feature prompts you to create a personalized profile that reflects your basic negotiation style. It also introduces you fundamental tensions in negotiation that you must address in formulating strategy.</p>
+			<p style="font-size: 14px;">It has three closely linked features. The <strong>Self-assessment</strong> feature prompts you to create a personalized profile reflecting your basic negotiation style. It also introduces you fundamental tensions in negotiation that you must address in formulating strategy.</p>
 		</section>
 
 		<section class="scorecardcard">
@@ -184,7 +169,7 @@
 
 		<section class="bestpracticescard">
 			<div style="height:65px"></div>
-			<p style="font-size: 14px;">And then, preparing for your next negotiation, always consult the third feature, <strong>My best practices</strong>. It compiles what you've learned from prior experience so that you can continue to enhance your strategic and interpersonal skills. Remember to consult the <strong>Resources</strong> section, as well, that points you to other sources of valuable negotiation advice.</p>
+			<p style="font-size: 14px;">And then, preparing for your next negotiation, always consult the third feature, <strong>My best practices</strong>. It compiles what you've learned from prior experience so that you can continually enhance your strategic and interpersonal skills. Be sure to consult the <strong>Resources</strong> section, as well, that points you to other sources of valuable negotiation advice.</p>
 		</section>
 
 	</div>
