--- a/Negotiation3/reports/dilemmas.html
+++ b/Negotiation3/reports/dilemmas.html
@@ -146,7 +146,7 @@
 			</section>
 			<section class="card">			
 				<p>Your negotiation results are linked to how you relate to other parties. Think of the interpersonal scale as representing the <strong>means</strong> of negotiation and the outcome scale as the <strong>ends</strong>.</p>
-	      		<p>Putting the two scales together reveals common bargaining styles. The lines in the diagram intersect at the 0-0. The example here is for a user who has a rating of 4 for the four skills (counting out from the center for each one).</p>
+	      		<p>Putting the two scales together reveals common bargaining styles. The lines in the diagram intersect at the 0-0 origin. The example here is for a user who has a rating of 4 for the four skills (counting out from the center for each one).</p>
 	      		<p>That balance may look nice, but some situations demand certain skills more than others.</p>
 			</section>
       	</div>
