--- a/Negotiation3/reports/practices-intro.html
+++ b/Negotiation3/reports/practices-intro.html
@@ -113,14 +113,14 @@
     		<p style="font-size: 14px;">Building a personalized list of best practices will help you:</p>
 		
 		<ul style="margin: 10px 0px 10px -20px;font-size: 14px;">
-			<li>reach agreements that might otherwise slip through your fingers</li>
-			<li>generate (and capture) value through creative problem-solving</li>
-			<li>resolve small disputes before they escalate into costly conflicts</li>
+			<li>Reach agreements that might otherwise slip through your fingers</li>
+			<li>Generate (and capture) value through creative problem-solving</li>
+			<li>Resolve small disputes before they escalate into costly conflicts</li>
 		</ul>
 	</section>
 	
 	<section class="card">
-		<p style="font-size: 14px;">Your success, however, depends on how much effort you invest into learning from your experience, so that you continue to polish your negotiation skills. The good news is that thoughtful preparation does not take much time. Remember: you want to be the best prepared negotiator at the table.</p>
+		<p style="font-size: 14px;">Your success, however, depends on the effort you invest into learning from your experience, in order to polish your negotiation skills. The good news is that thoughtful preparation does not take much time. Remember: you never want to be less prepared than the other negotiator at the table.</p>
 	</section>
 	
 	<section class="card">
