--- a/Negotiation3/reports/profiles.html
+++ b/Negotiation3/reports/profiles.html
@@ -130,7 +130,7 @@
             		<div class="col-xs-1" style="margin-right:10px">
               			<span data-icon="&#xe571;" style="font-size: 32px; color:#ff9f33"></span>
             		</div>
-            		<div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714"><p>To see the five profiles, swipe through to the pages that follow. </p>
+            		<div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714"><p>To see the five bargaining styles, swipe through to the pages that follow. </p>
             		</div>
           		</div>
         	</section>
@@ -161,7 +161,7 @@
 				<h1>Assertive Value-Creators</h1> 
 				<h2>15 percent of respondents</h2>
 				<canvas id="canvas5"></canvas>
-				<p>Like Assertive Value-Claimers, these people are just as confident about their ability to advocate for themselves, but are less certain about the value they obtain.</p>
+				<p>Like Assertive Value-Claimers, these people are just as confident about their ability to advocate for themselves, but they are less certain about the value they obtain.</p>
       			<p>In reality some of them may perform very well, but as psychological "maximizers," no matter how much they get, they tend worry that they should have claimed an even a bigger share of the pie.</p>
 			</section>
       	</div>
