--- a/Negotiation3/reports/scorecard-lessons.html
+++ b/Negotiation3/reports/scorecard-lessons.html
@@ -115,7 +115,7 @@
 	</section>
 	
 	<section class="card">
-		<p style="font-size: 14px;">For What-worked-well lessons, look first at those areas where you may have done better than usual. For what-would you differently, think about areas where you may have underperformed. Also review you your negotiation strategy and tactics broadly, not just the four skills you just evaluated. </p>
+		<p style="font-size: 14px;">For What-worked-well lessons, look first at those areas where you were most effective than usual. For what-would you differently, think about areas where you may have underperformed. (Of course, you should also review your negotiation strategy and tactics broadly, beyond the four skills you just evaluated.)</p>
 	</section>
 	
 	<section class="card">
