--- a/Negotiation3/reports/scorecard-summary.html
+++ b/Negotiation3/reports/scorecard-summary.html
@@ -111,7 +111,7 @@
 		<p style="font-size:14px">Negotiation 360&deg; will archive your scorecard for this negotiation and others that you will undertake. Also, the <strong>My Best Practices</strong> section will compile your growing list of WWW and WWYDD take-aways. Be sure to consult that resource before your next negotiation. It will enable you to get the most out what you learn from experience and reflection.</p>
 	</section>
 	<section class="card">
-		<p style="font-size:14px">Make on-going learning a habit. Put a weekly reminder in your calendar to review the most interesting and instructive negotiation you undertake in the coming days. Keeping score on a regular basis only takes a few minutes, but the rewards can be tremendous.</p>
+		<p style="font-size:14px">Make on-going learning a habit. Put a weekly reminder in your calendar to review the most interesting and instructive negotiation you undertake in the coming days. Keeping score on a regular basis only takes a few minutes. The rewards can be tremendous.</p>
 
 	</section>
 		 
