--- a/Negotiation3/reports/test2.html
+++ b/Negotiation3/reports/test2.html
@@ -111,7 +111,7 @@
 	</div>
 	
 	<div>
-		<p>Now, compare your overall effectiveness relative to people you typically negotiate with. <i>[If you are no better and no worse, than most people, score yourself in the 50th percentile; if you are better (or worse), score yourself accordingly.]</i></p>
+		<p>Now, compare your overall effectiveness relative to people you typically negotiate with. <i>[If you are no better or worse, than most people, score yourself in the 50th percentile; if you are better (or worse), score yourself accordingly.]</i></p>
 
         <p>Then tap <strong>Next</strong> above to see how your self-assessment compares to other negotiators.</p> 
 			
