--- a/Negotiation3/reports/yourprofile.html
+++ b/Negotiation3/reports/yourprofile.html
@@ -120,9 +120,9 @@
 		</section>
 		
 		<section class="card">
-			<h2>Consider the following questions</h2>
+			<h2>Consider the following more general questions</h2>
 			<ol style="margin: 10px 0px 10px -20px; font-size: 14px;">
-				<li>Is this profile a good fit for most of the negotiations you do?</li><br>
+				<li>Is this profile the best fit for most of the negotiations you do?</li><br>
 				<li>If you had to choose, where should your biggest strength be?</li><br>
 				<li>How flexible are you; that is, can you vary your approach according to the situation and the styles of different people you deal with?</li>
 			</ol>
@@ -134,7 +134,7 @@
 				<span data-icon="&#xe030;" style="font-size: 24px; color:#ff9f33"></span>
 			</div>
 			<div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714">
-				Go read the Skill-Building Tips section to learn how you can improve your skills.
+				Go read the Skill-Building Tips section to learn how you can improve all your skills.
 			</div>
 		</div>
 	</section>
