--- a/Negotiation3/reports/resources.html
+++ b/Negotiation3/reports/resources.html
@@ -111,16 +111,16 @@
 		  <p style="font-size:14px">For free downloads of practice guides and research articles about the negotiation skills highlighted in this app (and about negotiation more generally), visit the <strong><a href="http://www.negotiation3-0.com/" class="alert-link" style="color: #ff9f33">Negotiation 3.0 Website</a></strong></p>
 		</section>
 		<section class="card">
-		  <p style="font-size:14px">Another excellent resource is <strong><a href="http://www.pon.harvard.edu/" class="alert-link" style="color: #ff9f33">The Program on Negotiation</a></strong> based at the Harvard Law School</p>
+		  <p style="font-size:14px"><strong><a href="http://www.pon.harvard.edu/" class="alert-link" style="color: #ff9f33">The Program on Negotiation</a></strong> based at the Harvard Law School is another excellent resource</p>
 		</section>
 		<section class="card">
-		  <p style="font-size:14px">Michael Wheeler's <a href="http://www.amazon.com/The-Art-Negotiation-Improvise-Agreement/dp/1451690428" class="alert-link" style="color: #ff9f33"><strong><i>The Art of Negotiation</i></strong></a> (especially the chapters on openings, critical moments, and closing)</p>
+		  <p style="font-size:14px">Michael Wheeler's <a href="http://www.amazon.com/The-Art-Negotiation-Improvise-Agreement/dp/1451690428" class="alert-link" style="color: #ff9f33"><strong><i>The Art of Negotiation</i></strong></a> (especially the chapters on openings, critical moments, and closing) closely examines interpersonal dynamics</p>
 		</section>
 		<section class="card">
-		  <p style="font-size:14px">David Lax and James Sebenius's <a href="https://itunes.apple.com/us/book/manager-as-negotiator/id381492420?mt=11" class="alert-link" style="color: #ff9f33"><strong><i>The Manager as Negotiator</i></strong></a> (in particular, the chapter on creating and claiming value)</p>
+		  <p style="font-size:14px">David Lax and James Sebenius's <a href="https://itunes.apple.com/us/book/manager-as-negotiator/id381492420?mt=11" class="alert-link" style="color: #ff9f33"><strong><i>The Manager as Negotiator</i></strong></a> (in particular, the chapter on creating and claiming value) provides important analytic insights</p>
 		</section>
 		<section class="card">
-		  <p style="font-size:14px"><a href="http://www.amazon.com/Beyond-Winning-Negotiating-Create-Disputes/dp/0674012313" class="alert-link" style="color: #ff9f33"><strong><i>Beyond Winning</i></strong></a> (notably, the chapter on empathy and assertiveness), by Robert Mnookin, Scott Peppet, and Andrew Tulumello</p>
+		  <p style="font-size:14px"><a href="http://www.amazon.com/Beyond-Winning-Negotiating-Create-Disputes/dp/0674012313" class="alert-link" style="color: #ff9f33"><strong><i>Beyond Winning</i></strong></a> (notably, the chapter on empathy and assertiveness), by Robert Mnookin, Scott Peppet, and Andrew Tulumello illuminates three tensions in negotiation</p>
 		</section>
 	</div>
 	<div style="height:100px">
