--- a/Negotiation3/reports/scorecard-intro.html
+++ b/Negotiation3/reports/scorecard-intro.html
@@ -107,11 +107,11 @@
 		<div align="center">
 	        <img src="image-11.png" width="100px" height="100px" class="img-circle">
 		</div>
-		<p style="font-size: 14px;">Learning the right lessons from your negotiation experience will enhance your strategic agility and polish your interpersonal skills. Your after-action-review won't take long, but the payoff can be huge. The following questions will sharpen your analysis. Address them while your impressions are still sharp.</p>
+		<p style="font-size: 14px;">Learning the right lessons from your negotiation experience will enhance your strategic agility and polish your interpersonal skills. The after-action-review won't take long, but your payoff can be huge. The following questions will sharpen your analysis. Address them while your impressions are still sharp.</p>
 	</section>
 	
 	<section class="card">
-		<p style="font-size: 14px;">Focus your answers on the negotiation process-what you did and said-not the outcome. Perhaps you were lucky and got a great result because the other party was desperate for a deal. In another case, maybe you walked away empty-handed, but that was best anybody could do under the circumstances. In short, just assess those things that were under your control.</p>
+		<p style="font-size: 14px;">Focus your answers on the negotiation process - what you did and said - not the outcome. Perhaps you were lucky and got a great result because the other party was desperate for a deal. In another case, maybe you walked away empty-handed, but that was best anybody could do under the circumstances. In short, just assess those things that were under your control.</p>
 	</section>
 	
 	<section class="card">
