--- a/Negotiation3/reports/skills.html
+++ b/Negotiation3/reports/skills.html
@@ -156,7 +156,7 @@
 		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Inquire.</strong> Without realizing it, many negotiators fail to test their assumptions about the other parties' needs and perceptions.</li>
 		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Listen deeply.</strong> Don't prejudge. Be alert for ideas you can build on.</li>
 		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Consult your own feelings.</strong> If you are anxious, maybe they are feeling that, too.</li>
-		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>"Go to the balcony."</strong> Follow <strong><a href="javascript://" id="example1" data-toggle="popover" data-placement="left" title="Bill Ury" data-content="Author of &ldquo;Getting to Yes with Yourself&rdquo; and &ldquo;Getting Past No&rdquo;" style="color:#ff9f33">Bill Ury's</a></strong> advice and try to view your interaction as if you were a member of the audience, sitting way back, with a broad perspective on everything that is going on.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>"Go to the balcony."</strong> Follow <strong><a href="javascript://" id="example1" data-toggle="popover" data-placement="left" title="Bill Ury" data-content="Author of &ldquo;Getting to Yes with Yourself&rdquo; and &ldquo;Getting Past No&rdquo;" style="color:#ff9f33">Bill Ury's</a></strong> advice and try to view your interaction as if you were a member of the audience, sitting way back, with a broad perspective on everything that unfolds.</li>
 			</ul>
 	    </div>
 	  </div>
@@ -189,7 +189,7 @@
 			<ul class="list-group">
 		        <li class="list-group-item" style="text-align: left; font-size:14px">Don't get <a href="javascript://" id="example3" data-toggle="popover" data-placement="bottom" title="Anchoring" data-content="Psychological research shows that people often get unduly influenced by the first offer they hear, even if it's unreasonable." style="color:#ff9f33">"anchored."</a> <strong>Work from your number.</strong> Not theirs. Provide solid reasons for your offers and where you have to say no.</li>
 		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Watch the clock.</strong> If the other party is under a deadline, use that to your advantage.</li>
-		        <li class="list-group-item" style="text-align: left; font-size:14px">Try <strong>"post-settlement settlement."</strong> After reaching a firm agreement, suggest that you review the terms to see if further adjustments might help both parties.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px">Try <strong>"post-settlement settlement."</strong> After reaching a tentative agreement, suggest jointly reviewing the terms to see if further adjustments might help both parties.</li>
 		        <li class="list-group-item" style="text-align: left; font-size:14px">Avoid the <strong>winner's curse.</strong> Don't waste time worrying about whether you could have gotten more. The only way to know just how far you can push is by demanding too much and risking impasse.</li>
 			</ul>
 	    </div>
