content edits from mike round 2

--- a/Negotiation3/reports/about.html
+++ b/Negotiation3/reports/about.html
@@ -42,48 +42,6 @@
 		  transform-origin:top left;
 		}
 
-		.selfasesscard {
-		  padding:0.5rem 1rem;
-		  box-shadow:0 1px 2px #aaa;
-		  background:white;
-		  margin: 1rem 1rem;
-		  border-radius:1px;
-		  background-image: url("top-profile.png");
-   		  background-size: 100%;
-		  background-repeat: no-repeat;
-		  user-select:none;
-		  animation:fly-in-from-left .5s 1s ease both;
-		  transform-origin:top left;
-		}
-
-		.scorecardcard {
-		  padding:0.5rem 1rem;
-		  box-shadow:0 1px 2px #aaa;
-		  background:white;
-		  margin: 1rem 1rem;
-		  border-radius:1px;
-		  background-image: url("top-scorecard.png");
-		  background-repeat: no-repeat;
-   		  background-size: 100%;
-		  user-select:none;
-		  animation:fly-in-from-left .5s 1s ease both;
-		  transform-origin:top left;
-		}
-
-		.bestpracticescard {
-		  padding:0.5rem 1rem;
-		  box-shadow:0 1px 2px #aaa;
-		  background:white;
-		  margin: 1rem 1rem;
-		  border-radius:1px;
-		  background-image: url("top-bestpractice.png");
-   		  background-size: 100%;
-		  background-repeat: no-repeat;
-		  user-select:none;
-		  animation:fly-in-from-left .5s 1s ease both;
-		  transform-origin:top left;
-		}
-
 		.card {
 		  padding:0.5rem 1rem;
 		  box-shadow:0 1px 2px #aaa;
@@ -154,21 +112,27 @@
 			<div align="center">
 		        <img src="image-6.png" width="100px" height="100px" class="img-circle">
 			</div>
-			<p style="font-size: 14px;"><strong>Negotiation 360&deg;</strong> was developed by Harvard Business School professor and author Michael Wheeler to help you identify current skills you can build on, as well as other areas where you can improve. It highlights key negotiation concepts and techniques for creating value, engaging other parties, and learning from experience.</p>
+			<p style="font-size: 14px;"><strong>Negotiation 360&deg;</strong> was developed by Harvard Business School professor and author Michael Wheeler to help you identify current skills you can build on, and other areas where you can improve. It highlights key negotiation concepts and techniques for creating value, engaging other parties, and learning from experience.</p>
 		</section>
 
-		<section class="selfasesscard">
-			<div style="height:65px"></div>
-			<p style="font-size: 14px;">It has three closely linked features. The <strong>Self-assessment</strong> feature prompts you to create a personalized profile reflecting your basic negotiation style. It also introduces you fundamental tensions in negotiation that you must address in formulating strategy.</p>
+		<section class="card">
+			<div align="center">
+		        <img src="user_male4-32.png" width="36px" height="36px" class="img-circle">
+			</div>
+			<p style="font-size: 14px;"><strong>Negotiation 360&deg;</strong> has three closely linked features. The <strong>Self-assessment</strong> feature prompts you to create a personalized profile reflecting your basic negotiation style. It also introduces you fundamental tensions in negotiation that you must address in formulating strategy.</p>
 		</section>
 
-		<section class="scorecardcard">
-			<div style="height:65px"></div>
+		<section class="card">
+			<div align="center">
+		        <img src="compass-32.png" width="36px" height="36px" class="img-circle">
+			</div>
 			<p style="font-size: 14px;">The <strong>Scorecard</strong> feature enables you to do an after-action-review of every negotiation you undertake, large or small. It enables you to draw the right lessons from your own on-going experience.</p>
 		</section>
 
-		<section class="bestpracticescard">
-			<div style="height:65px"></div>
+		<section class="card">
+			<div align="center">
+		        <img src="best-practices.png" width="36px" height="36px" class="img-circle">
+			</div>
 			<p style="font-size: 14px;">And then, preparing for your next negotiation, always consult the third feature, <strong>My best practices</strong>. It compiles what you've learned from prior experience so that you can continually enhance your strategic and interpersonal skills. Be sure to consult the <strong>Resources</strong> section, as well, that points you to other sources of valuable negotiation advice.</p>
 		</section>
 
