--- a/Negotiation3/reports/compare.html
+++ b/Negotiation3/reports/compare.html
@@ -151,7 +151,8 @@
 	</section>
 		
 	<section class="card">
-		<p>There is nothing basically good or bad if your scores match those averages. (Relatively few people have an exact match.)  In your experience, do you think other negotiators accurately assess their strengths and weaknesses? For example:</p> 
+		<p>There is nothing basically good or bad if your scores match those averages. (Relatively few people have an exact match.)</p>
+		<p>In your experience, do you think other negotiators accurately assess their strengths and weaknesses? For example:</p> 
 
 		<ul style="margin: 10px 0px 10px -20px;">
 			<li>Do most people you deal with actually get inferior results?</li>
@@ -159,7 +160,7 @@
 		</ul>
 	</section>
 	<section class="card">
-		<p>The fact is that our self-perceptions do not always match reality. Even so, those beliefs still influence behavior, especially when it comes to interacting with others. </p> 
+		<p><strong>Perhaps not.</strong> The fact is that our self-perceptions do not always match reality. Even so, those beliefs still influence behavior, especially when it comes to interacting with others. </p> 
 	</section>
 	
 	<section class="card">
