--- a/Negotiation3/reports/dilemmas.html
+++ b/Negotiation3/reports/dilemmas.html
@@ -134,7 +134,7 @@
 				<canvas id="canvas2"></canvas>
 			</section>
 			<section class="card">
-				<p>Two other questions address <strong>outcomes</strong>, specifically the ability to create value and capture your share of it.</p>
+				<p>Two other questions address <strong>outcomes</strong>, specifically the ability to create value and to capture your share of it.</p>
 	      		<p>In practice there is often a tension between these two skills. Value-creating trades require understanding the parties' complementary interests.  But if you disclose your interests unilaterally, you might be exploited by others who bluff and conceal their true needs. Value will be created, but they may get most of it.</p>
 			</section>
 		</div>
@@ -150,6 +150,19 @@
 	      		<p>That balance may look nice, but some situations demand certain skills more than others.</p>
 			</section>
       	</div>
+	
+      	<div class="owl-item">
+			<section class="card">			
+				<div class="row"> 
+            		<div class="col-xs-1" style="margin-right:10px">
+              			<span data-icon="&#xe587;" style="font-size: 36px; color:#ff9f33"></span>
+            		</div>
+            		<div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714"><p>Tap <strong>Back</strong> to see how these two dimensions of negotiation define different styles - and how they reflect your personal profile.</p>
+            		</div>
+				</div>
+			</section>
+      	</div>
+
 	</div>
 
   <script type="text/javascript" src="jquery-1.11.0.min.js"></script>
