--- a/Negotiation3/reports/practices-intro.html
+++ b/Negotiation3/reports/practices-intro.html
@@ -113,9 +113,9 @@
     		<p style="font-size: 14px;">Building a personalized list of best practices will help you:</p>
 		
 		<ul style="margin: 10px 0px 10px -20px;font-size: 14px;">
-			<li>Reach agreements that might otherwise slip through your fingers</li>
-			<li>Generate (and capture) value through creative problem-solving</li>
-			<li>Resolve small disputes before they escalate into costly conflicts</li>
+			<li>Reach agreements that might otherwise slip through your fingers.</li>
+			<li>Generate (and capture) value through creative problem-solving.</li>
+			<li>Resolve small disputes before they escalate into costly conflicts.</li>
 		</ul>
 	</section>
 	
