--- a/Negotiation3/reports/practices-wwidd.html
+++ b/Negotiation3/reports/practices-wwidd.html
@@ -133,7 +133,7 @@
 		</div>
   	<div>
 		<h4 style="font-weight: 400; color:#ff9f33">What Would I Do Differently?</h4>
-		<p>Lorem ipsum dolar sit ami</p>
+		<p>And here you'll see things that you plan to do differently in negotiations, according to your Scorecard entries.</p>
 	</div>
 	</section>
 	
