--- a/Negotiation3/reports/profiles.html
+++ b/Negotiation3/reports/profiles.html
@@ -183,17 +183,19 @@
 				<canvas id="canvas7"></canvas>
 				<p>These people rated themselves strongest on both ends of the outcome scale. They may be correct, though it raises a question of how it's possible to attain good results in spite of relational skills that are not as strong.</p>
 			</section>
+		</div>
+
+    	<div class="owl-item">
 			<section class="card">
           		<div class="row">
             		<div class="col-xs-1" style="margin-right:10px">
-              			<span data-icon="&#xe587;" style="font-size: 30px; color:#ff9f33"></span>
+              			<span data-icon="&#xe587;" style="font-size: 36px; color:#ff9f33"></span>
             		</div>
-            		<div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714">Tap <strong>Back</strong> to see how your personal profile compares to these different groups.
+            		<div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714"><p>Tap <strong>Back</strong> to see how your personal profile compares to these different groups.</p>
             		</div>
           		</div>
 			</section>
 		</div>
-
 	</div>
 
   <script type="text/javascript" src="jquery-1.11.0.min.js"></script>
