--- a/Negotiation3/reports/scorecard-intro.html
+++ b/Negotiation3/reports/scorecard-intro.html
@@ -107,15 +107,15 @@
 		<div align="center">
 	        <img src="image-11.png" width="100px" height="100px" class="img-circle">
 		</div>
-		<p style="font-size: 14px;">Learning the right lessons from your negotiation experience will enhance your strategic agility and polish your interpersonal skills. The after-action-review won't take long, but your payoff can be huge. The following questions will sharpen your analysis. Address them while your impressions are still sharp.</p>
+		<p style="font-size: 14px;">Learning the right lessons from your negotiation experience will enhance your strategic agility and polish your interpersonal skills. The after-action-review won't take long, but your payoff is huge. The following questions will sharpen your analysis. Address them while your impressions are still sharp.</p>
 	</section>
 	
 	<section class="card">
-		<p style="font-size: 14px;">Focus your answers on the negotiation process - what you did and said - not the outcome. Perhaps you were lucky and got a great result because the other party was desperate for a deal. In another case, maybe you walked away empty-handed, but that was best anybody could do under the circumstances. In short, just assess those things that were under your control.</p>
+		<p style="font-size: 14px;">Focus your answers on the negotiation process - what you did and said - rather than the outcome. Perhaps you were lucky and got a great result because the other party was desperate for a deal. In another case, maybe you walked away empty-handed, but that was best anybody could do under the circumstances. In short, just assess those things that were under your control.</p>
 	</section>
 	
 	<section class="card">
-		<p style="font-size: 14px;">Don't be overly self-critical or engage in 20-20 hindsight. Make sure you note what you did well, not simply areas where you wish you did better. Start by jotting down some basic information about this particular negotiation, so you can easily review your scorecard later. Then you'll be asked to review how you managed various aspects of the process.</p>
+		<p style="font-size: 14px;">Likewise, don't be overly self-critical. Make sure you note what you did well, not simply areas where you wish you did better. Start by jotting down some basic information about this particular negotiation, so you can easily review your scorecard later. Then you'll be asked to review how you managed various aspects of the process.</p>
 
 	</section>
 		 
