--- a/Negotiation3/reports/scorecard-lessons.html
+++ b/Negotiation3/reports/scorecard-lessons.html
@@ -107,7 +107,7 @@
 		<div align="center">
 	        <img src="image-12.png" width="100px" height="100px" class="img-circle">
 		</div>
-		<p style="font-size: 14px;">To learn from experience you must identify those decisions and actions that worked well for you, or that were unsuccessful. My colleagues at the Program on Negotiation created the acronyms <strong>WWW</strong> (what-worked-well) and <strong>WWYDD</strong> (what-would-you-do-differently) to stimulate self-reflection. They're essential for any after-action review, especially so for negotiation.</p>
+		<p style="font-size: 14px;">To learn from experience you must identify those decisions and actions that worked well for you, or that were unsuccessful. My colleagues at the Program on Negotiation created the acronyms <strong>WW</strong> (what-<strong>worked-well</strong>) and <strong>DD</strong> (what-would-you-<strong>do-differently</strong>) to stimulate self-reflection. They're essential for any after-action review, especially so for negotiation.</p>
 	</section>
 	
 	<section class="card">
@@ -115,11 +115,11 @@
 	</section>
 	
 	<section class="card">
-		<p style="font-size: 14px;">For What-worked-well lessons, look first at those areas where you were most effective than usual. For what-would you differently, think about areas where you may have underperformed. (Of course, you should also review your negotiation strategy and tactics broadly, beyond the four skills you just evaluated.)</p>
+		<p style="font-size: 14px;">For <strong>worked-well</strong> lessons, look first at those areas where you were most effective than usual. For <strong>do-differently</strong>, think about areas where you may have underperformed. (Of course, you should also review your negotiation strategy and tactics broadly, beyond the four skills you just evaluated.)</p>
 	</section>
 	
 	<section class="card">
-		<p style="font-size: 14px;">Writing about what-worked-well, for example, you might note, "Meeting at their office gave me a better sense of his company than if I insisted on negotiating at my place." For what-you-would-do-differently, you might say, "I should have sought competing bids before renegotiating with our incumbent supplier."</p>
+		<p style="font-size: 14px;">Writing about <strong>worked-well</strong>, for example, you might note, "Meeting at their office gave me a better sense of his company than if I insisted on negotiating at my place." For <strong>do-differently</strong>, you might say, "I should have sought competing bids before renegotiating with our incumbent supplier."</p>
 
 	</section>
 		 
