--- a/Negotiation3/reports/practices-summary.html
+++ b/Negotiation3/reports/practices-summary.html
@@ -121,11 +121,10 @@ canvas-holder{
 		<section class="card">
 			<div class="container">
 				<h1>Agreement Rate</h1> 
-				<div class="row">
-					<div class="col-xs-6" class="canvas-holder">
-						<canvas id="canvas" width="200" height="150"></canvas>
+						<div style="width: 150px; float: left">
+						<canvas id="canvas" width="160" height="150"></canvas>
 					</div>
-					<div class="col-xs-6" id="legend">
+					<div style="margin-left: 140px" id="legend">
 				</div>
 			</div>
 		</section>
